testsuite/tests/rename/should_compile/SP_Splice.hs
{-# LANGUAGE TemplateHaskell #-}
{-# LANGUAGE StaticPointers #-}
module SP where

import GHC.StaticPtr

unit = $(deRefStaticPtr $ (static [| () |]))


