testsuite/tests/rename/should_fail/RnEmptyStatementGroup1.hs
{-# LANGUAGE TransformListComp #-}
{-# LANGUAGE Arrows            #-}

module ShouldFail where

one = [() | then ()]

two = do

three = proc () -> do
